--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,12 @@
               content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
         <title>스파르타코딩클럽 | 맛집 검색</title>
 
+        <meta property="og:title" content="스파르타 맛집 지도"/>
+        <meta property="og:description" content="mini project for Web Plus"/>
+        <meta property="og:image" content="{{ url_for('static', filename='og_image.jpg') }}"/>
+        <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
+        <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
+
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
         <script type="text/javascript"
@@ -100,7 +106,7 @@
             function make_card(i, matjip) {
                 let temp_html = `<div class="card" id="card-${i}">
                                     <div class="card-body">
-                                        <h5 class="card-title"><a href="#" class="matjip-title">${matjip.title}</a></h5>
+                                        <h5 class="card-title"><a href="javascript:click2center('${i}')" class="matjip-title">${matjip.title}</a></h5>
                                         <h6 class="card-subtitle mb-2 text-muted">${matjip.category}</h6>
                                         <p class="card-text">${matjip.address}</p>
                                         <p class="card-text" style="color:blue;">${matjip.show}</p>
@@ -165,6 +171,17 @@
                         }, 2000);
                     }
                 });
+            }
+
+            function click2center(i) {
+                let marker = markers[i]
+                let infowindow = infowindows[i]
+                if (infowindow.getMap()) {
+                    infowindow.close();
+                } else {
+                    infowindow.open(map, marker);
+                    map.setCenter(infowindow.position)
+                }
             }
 
 
